Better BondLength management in the UI.
While it always defaults to 1 in the memory model of ReactionRuleSpec,
the BondLength only makes sense to be displayed for Springsalad Binding
reactions